mi primera confirmación de actualización

--- a/about.html
+++ b/about.html
@@ -33,6 +33,10 @@
             <img src="31.jpg" alt="Descripción de la imagen 3" />
         </div>
     </div>
+
+    <div class="greeting">
+        Esta es una nueva linea de codigo en mi sitio de about
+    </div>
     <script src="index.js"></script>
 </body>
 
